--- a/IT FEST.html
+++ b/IT FEST.html
@@ -217,12 +217,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div data-is-ix2-target="1" class="header-service_lottie w-condition-invisible" data-w-id="009c0a9e-f67b-680b-d399-76975d5c65e1" data-animation-type="lottie" data-src="https://cdn.prod.website-files.com/63c560228fad5afe6ddbe1a4/643575777159400a1efbacc2_Build%20BG%20V2.lottie" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="5.016666666666667" data-duration="0"></div>
-                    <div data-is-ix2-target="1" class="header-service_lottie" data-w-id="27a7ec2f-66a8-7e81-3fcd-2f122b29dc4d" data-animation-type="lottie" data-src="https://cdn.prod.website-files.com/63c560228fad5afe6ddbe1a4/64357a3d986a06ec8f813930_Design%20BG%20V1.lottie" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="5.016666666666667" data-duration="0"></div>
-                    <div data-is-ix2-target="1" class="header-service_lottie w-condition-invisible" data-w-id="fc7601e6-58f5-d0fa-0baf-86cef1b2977a" data-animation-type="lottie" data-src="https://cdn.prod.website-files.com/63c560228fad5afe6ddbe1a4/64357aeb72ffee43a7c28e61_Automate%20BG%20V2.lottie" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="5.016666666666667" data-duration="0"></div>
-                </div>
-                  <div
+                    </div> 
+                    <div
                     class="circle w-full h-full max-w-md max-h-md lg:max-w-full lg:min-w-[445px] lg:max-h-full lg:min-h-[445px]"
                     style="--total: 12"
                   >
@@ -281,7 +277,6 @@
             </div>
         </section>
 
-            
         <section class="section_hero">
           <div class="w-layout-blockcontainer padding-global padding-section-hero w-container">
             <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="hero_wrapper">
@@ -1062,19 +1057,18 @@
                                   fill="none"
                                   xmlns="http://www.w3.org/2000/svg"
                                 >
-                                  <!-- 🧠 svg clip path -->
+                                  
                                   <clipPath id="cta-letter">
                                     <path
                                       d="M426.794 276.327L349.999 353.122C347.867 355.254 344.424 355.254 342.306 353.122C340.174 350.991 340.174 347.547 342.306 345.429L419.088 268.647C439.598 248.137 439.598 214.877 419.088 194.366L342.292 117.571C340.16 115.439 340.16 111.996 342.292 109.878V109.878C344.42 107.749 347.871 107.749 349.999 109.878L426.781 186.659C428.954 188.832 431.277 190.772 433.695 192.494C446.39 201.445 463.908 192.153 463.908 176.616V51.7481C463.908 23.1753 440.746 0 412.16 0H52.6832C24.0967 0 0.935059 23.1616 0.935059 51.7481V411.252C0.935059 439.825 24.0967 463 52.6832 463H412.187C440.76 463 463.935 439.838 463.935 411.252V286.411C463.935 270.861 446.39 261.555 433.695 270.519C431.277 272.228 428.967 274.168 426.808 276.327H426.794Z"
                                     ></path>
                                   </clipPath>
-                                  <!-- 🧠 image hosted on Webflow + clip path reference -->
-                                  <image
-                                   src="images/v2.jpg"
-                                    alt="Image"
-                                    width="100%"
-                                    class="letter-img"
-                                  ></image>
+
+                                  <image clip-path="url(#cta-letter)" 
+                                  href="images/v2.jpg"
+                                   alt="Image" width="100%" class="letter-img">  
+  
+                                  </image>
                                 </svg>
                               </div>
                             </div>
