--- a/IT FEST.html
+++ b/IT FEST.html
@@ -1735,58 +1735,9 @@
 
     <Script src="INDEX.js"></Script>
     <script src="tes02.js"></script>
-    <script
-      src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=663249e88f740b1eb4ae9a5a"
-      type="text/javascript"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://assets-global.website-files.com/663249e88f740b1eb4ae9a5a/js/webflow.5df6228f6.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63c560228fad5afe6ddbe1a4"
-      type="text/javascript"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.prod.website-files.com/63c560228fad5afe6ddbe1a4/js/webflow.ae50930fc.js"
-      type="text/javascript"
-    ></script>
- 
-    <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-W8X56RM"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe>
-    </noscript>
-    <script
-      async=""
-      src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-cmsload@1/cmsload.js"
-    ></script>
-    <script
-      async=""
-      src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-cmsselect@1/cmsselect.js"
-    ></script>
-    <script
-      async=""
-      src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-cmscombine@1/cmscombine.js"
-    ></script>
-    <script
-      defer=""
-      src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-socialshare@1/socialshare.js"
-    ></script>
-    <script
-    src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"
-    type="text/javascript"
-  ></script>
-  <script type="text/javascript">
-    WebFont.load({ google: { families: ["Inter:regular,500,600", "Sora:regular,500,600"] } });
-  </script>
+    <script src="fest03.js"></script>
+    <script src="fest04.js"></script>
+
   <script type="text/javascript">
     !(function (o, c) {
       var n = c.documentElement,
@@ -1796,10 +1747,7 @@
           (n.className += t + "touch");
     })(window, document);
   </script>
-  <script
-    type="text/javascript"
-    src="https://cdn.weglot.com/weglot.min.js?api_key=wg_c840f3d48a4ba1e5f6d6405fd8aacea78"
-  ></script>
+
 
     <script src="https://tools.refokus.com/copy-to-clipboard/bundle.v1.0.0.js"></script>
 
@@ -1810,13 +1758,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/Observer.min.js"></script>
-
-    <script
-    defer=""
-    src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-mirrorclick@1/mirrorclick.js"
-  >
-    </script>
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
    <script
     defer=""
     src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-scrolldisable@1/scrolldisable.js"
@@ -1826,11 +1767,6 @@
     async=""
     src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-cmsfilter@1/cmsfilter.js"
   ></script>
-
-      <script
-    defer=""
-    src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-accordion@1/accordion.js"
-       ></script>
   <script
     type="text/javascript"
     src="https://cdn.weglot.com/weglot.min.js?api_key=wg_c840f3d48a4ba1e5f6d6405fd8aacea78"
