--- a/IT FEST.html
+++ b/IT FEST.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <title>IT FEST</title>
 
-    <link rel="stylesheet" href="IT FEST.css" type="text/css" />
-    <link rel="stylesheet" href="css/Fest03.css">
-    <link rel="stylesheet" href="css/hero.css" />
-    <link rel="stylesheet" href="INDEX.css">
+    <link rel="stylesheet" href="css/fest01.css">
+    <link rel="stylesheet" href="css/fest02.css">
+    <link rel="stylesheet" href="css/fest03.css">
+    <link rel="stylesheet" href="css/fest04.css">
 
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
@@ -1733,10 +1733,10 @@
     </main>
 
 
-    <Script src="INDEX.js"></Script>
-    <script src="tes02.js"></script>
-    <script src="fest03.js"></script>
-    <script src="fest04.js"></script>
+    <script src="js/fest01.js"></script>
+    <script src="js/fest02.js"></script>
+    <script src="js/fest03.js"></script>
+    <script src="js/fest04.js"></script>
 
   <script type="text/javascript">
     !(function (o, c) {
