--- a/IT FEST.html
+++ b/IT FEST.html
@@ -16,7 +16,6 @@
   </head>
 
   <body>
-    
     <nav class="navbar">
       <div class="nav-bar" style="height: 6rem; width: 1263.33px;">
           <div class="nav-bar__wrapper">
@@ -1208,19 +1207,19 @@
                             <div class="awards_list-logo">
                               <img
                                 loading="lazy"
-                                src="https://cdn.prod.website-files.com/63c560228fad5afd4ddbe1b3/65253ca394aa04d73fdfb4a9_webflow%20logo.svg"
-                                alt="Finalists Webflow Partner Awards 2021 &amp; 2022"
+                                src="https://cdn.prod.website-files.com/63c560228fad5afd4ddbe1b3/65253ca394aa04d73fdfb4a9_fest%20logo.svg"
+                                alt="Finalists fest Partner Awards 2021 &amp; 2022"
                                 class="awards_list-image"
                               />
                               <img
                                 loading="lazy"
-                                src="https://cdn.prod.website-files.com/63c560228fad5afd4ddbe1b3/65253ca394aa04d73fdfb4a9_webflow%20logo.svg"
-                                alt="Finalists Webflow Partner Awards 2021 &amp; 2022"
+                                src="https://cdn.prod.website-files.com/63c560228fad5afd4ddbe1b3/65253ca394aa04d73fdfb4a9_fest%20logo.svg"
+                                alt="Finalists fest Partner Awards 2021 &amp; 2022"
                                 class="awards_list-image is-san w-condition-invisible"
                               />
                             </div>
                             <div class="text-size-small text-color-dark-grey">
-                              Finalists Webflow Partner Awards 2021 &amp;2022
+                              Finalists fest Partner Awards 2021 &amp;2022
                             </div>
                           </div>
                         </div>
@@ -1368,20 +1367,20 @@
                             <div class="awards_list-logo">
                               <img
                                 loading="lazy"
-                                src="https://cdn.prod.website-files.com/63c560228fad5afd4ddbe1b3/65253ca394aa04d73fdfb4a9_webflow%20logo.svg"
-                                alt="Finalists Webflow Partner Awards 2021 &amp; 2022"
+                                src="https://cdn.prod.website-files.com/63c560228fad5afd4ddbe1b3/65253ca394aa04d73fdfb4a9_fest%20logo.svg"
+                                alt="Finalists fest Partner Awards 2021 &amp; 2022"
                                 class="awards_list-image"
                               />
                               <img
                                 loading="lazy"
-                                src="https://cdn.prod.website-files.com/63c560228fad5afd4ddbe1b3/65253ca394aa04d73fdfb4a9_webflow%20logo.svg"
-                                alt="Finalists Webflow Partner Awards 2021 &amp; 2022"
+                                src="https://cdn.prod.website-files.com/63c560228fad5afd4ddbe1b3/65253ca394aa04d73fdfb4a9_fest%20logo.svg"
+                                alt="Finalists fest Partner Awards 2021 &amp; 2022"
                                 class="awards_list-image is-san w-condition-invisible"
                               />
                             </div>
                             <div>
                               <div class="text-size-small text-color-dark-grey">
-                                Finalists Webflow Partner Awards 2021 &amp;2022
+                                Finalists fest Partner Awards 2021 &amp;2022
                               </div>
                             </div>
                           </div>
