--- a/IT FEST.html
+++ b/IT FEST.html
@@ -1390,30 +1390,47 @@
           <div class="faq_header">
             <h3>Frequently Asked Questions</h3>
             <p class="text-size-medium">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim
-              in eros elementum tristique.
+              Pertanyaan yang sering ditanyakan kepada Vina
             </p>
           </div>
           <div class="faq_component">
-            <div data-w-id="cfa46428-026c-2b1e-26b1-fc82afe86913" style="
-                    -webkit-transform: translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0)
-                      rotateY(0) rotateZ(0) skew(0, 0);
-                    -moz-transform: translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0)
-                      rotateY(0) rotateZ(0) skew(0, 0);
-                    -ms-transform: translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0)
-                      rotateZ(0) skew(0, 0);
-                    transform: translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0)
-                      rotateZ(0) skew(0, 0);
-                    opacity: 0;
-                  " class="w-layout-grid faq_list">
+            <div
+              data-w-id="cfa46428-026c-2b1e-26b1-fc82afe86913"
+              style="
+                -webkit-transform: translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0)
+                  rotateY(0) rotateZ(0) skew(0, 0);
+                -moz-transform: translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0)
+                  rotateY(0) rotateZ(0) skew(0, 0);
+                -ms-transform: translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0)
+                  rotateZ(0) skew(0, 0);
+                transform: translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0)
+                  rotateZ(0) skew(0, 0);
+                opacity: 0;
+              "
+              class="w-layout-grid faq_list"
+            >
               <div class="faq_accordion">
                 <div data-w-id="cfa46428-026c-2b1e-26b1-fc82afe86939" class="faq_question">
-                  <div class="text-weight-semibold text-size-medium">Apa kabar?</div>
+                  <div class="text-weight-semibold text-size-medium">Bagaimana supaya lolos seleksi BUMN?</div>
                   <div class="faq_icon">
                     <div class="icon-1x1-xxsmall w-embed">
-                      <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 8 8">
-                        <path d="M4 0L4 8" className="cls-1" stroke="currentcolor" stroke-width="0.8px"></path>
-                        <path d="M8 4L0 4" className="cls-1" stroke="currentcolor" stroke-width="0.8px"></path>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        data-name="Layer 1"
+                        viewBox="0 0 8 8"
+                      >
+                        <path
+                          d="M4 0L4 8"
+                          className="cls-1"
+                          stroke="currentcolor"
+                          stroke-width="0.8px"
+                        ></path>
+                        <path
+                          d="M8 4L0 4"
+                          className="cls-1"
+                          stroke="currentcolor"
+                          stroke-width="0.8px"
+                        ></path>
                       </svg>
                     </div>
                   </div>
@@ -1421,23 +1438,33 @@
                 <div style="width: 100%; height: 0px" class="faq_answer">
                   <div class="faq_answer-wrapper">
                     <p class="text-size-regular">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                      varius enim in eros elementum tristique. Duis cursus, mi quis viverra
-                      ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
-                      Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut
-                      sem vitae risus tristique posuere.
+                      Ikuti tahapan tahapan yang ada, dan jangan sampai terlewat buat semua berkas rapi dan tertata!
                     </p>
                   </div>
                 </div>
               </div>
               <div class="faq_accordion">
                 <div data-w-id="d56fc1aa-2c43-9d69-7937-adcadde3481d" class="faq_question">
-                  <div class="text-weight-semibold text-size-medium">Apa Kabar</div>
+                  <div class="text-weight-semibold text-size-medium">Bagaimana karier di BUMN?</div>
                   <div class="faq_icon">
                     <div class="icon-1x1-xxsmall w-embed">
-                      <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 8 8">
-                        <path d="M4 0L4 8" className="cls-1" stroke="currentcolor" stroke-width="0.8px"></path>
-                        <path d="M8 4L0 4" className="cls-1" stroke="currentcolor" stroke-width="0.8px"></path>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        data-name="Layer 1"
+                        viewBox="0 0 8 8"
+                      >
+                        <path
+                          d="M4 0L4 8"
+                          className="cls-1"
+                          stroke="currentcolor"
+                          stroke-width="0.8px"
+                        ></path>
+                        <path
+                          d="M8 4L0 4"
+                          className="cls-1"
+                          stroke="currentcolor"
+                          stroke-width="0.8px"
+                        ></path>
                       </svg>
                     </div>
                   </div>
@@ -1445,23 +1472,32 @@
                 <div style="width: 100%; height: 0px" class="faq_answer">
                   <div class="faq_answer-wrapper">
                     <p class="text-size-regular">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                      varius enim in eros elementum tristique. Duis cursus, mi quis viverra
-                      ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
-                      Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut
-                      sem vitae risus tristique posuere.
-                    </p>
+                      Pengalaman bekerja di BUMN adalah salah satu pencapain terbesar dan lika liku di BUMN juga pasti menantang!
                   </div>
                 </div>
               </div>
               <div class="faq_accordion">
                 <div data-w-id="7327a917-cb09-3c19-9626-040273db18ba" class="faq_question">
-                  <div class="text-weight-semibold text-size-medium">How does FlowUp work?</div>
+                  <div class="text-weight-semibold text-size-medium">Apakah bisa promosi jabatan di BUMN?</div>
                   <div class="faq_icon">
                     <div class="icon-1x1-xxsmall w-embed">
-                      <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 8 8">
-                        <path d="M4 0L4 8" className="cls-1" stroke="currentcolor" stroke-width="0.8px"></path>
-                        <path d="M8 4L0 4" className="cls-1" stroke="currentcolor" stroke-width="0.8px"></path>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        data-name="Layer 1"
+                        viewBox="0 0 8 8"
+                      >
+                        <path
+                          d="M4 0L4 8"
+                          className="cls-1"
+                          stroke="currentcolor"
+                          stroke-width="0.8px"
+                        ></path>
+                        <path
+                          d="M8 4L0 4"
+                          className="cls-1"
+                          stroke="currentcolor"
+                          stroke-width="0.8px"
+                        ></path>
                       </svg>
                     </div>
                   </div>
@@ -1469,23 +1505,33 @@
                 <div style="width: 100%; height: 0px" class="faq_answer">
                   <div class="faq_answer-wrapper">
                     <p class="text-size-regular">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                      varius enim in eros elementum tristique. Duis cursus, mi quis viverra
-                      ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
-                      Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut
-                      sem vitae risus tristique posuere.
+                      Tentu saja bisa! Jika karyawan memiliki pengalaman yang cukup dan sudah diuji oleh atasan!
                     </p>
                   </div>
                 </div>
               </div>
               <div class="faq_accordion">
                 <div data-w-id="922e21d1-9ddb-c081-b4e4-0f49dad8d021" class="faq_question">
-                  <div class="text-weight-semibold text-size-medium">Apa kabar</div>
+                  <div class="text-weight-semibold text-size-medium">Apakah gaji BUMN besar?</div>
                   <div class="faq_icon">
                     <div class="icon-1x1-xxsmall w-embed">
-                      <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 8 8">
-                        <path d="M4 0L4 8" className="cls-1" stroke="currentcolor" stroke-width="0.8px"></path>
-                        <path d="M8 4L0 4" className="cls-1" stroke="currentcolor" stroke-width="0.8px"></path>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        data-name="Layer 1"
+                        viewBox="0 0 8 8"
+                      >
+                        <path
+                          d="M4 0L4 8"
+                          className="cls-1"
+                          stroke="currentcolor"
+                          stroke-width="0.8px"
+                        ></path>
+                        <path
+                          d="M8 4L0 4"
+                          className="cls-1"
+                          stroke="currentcolor"
+                          stroke-width="0.8px"
+                        ></path>
                       </svg>
                     </div>
                   </div>
@@ -1493,11 +1539,7 @@
                 <div style="width: 100%; height: 0px" class="faq_answer">
                   <div class="faq_answer-wrapper">
                     <p class="text-size-regular">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                      varius enim in eros elementum tristique. Duis cursus, mi quis viverra
-                      ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
-                      Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut
-                      sem vitae risus tristique posuere.
+                      Gaji BUMN tergantung dari golongan berapa karyawan tersebut, semakin tinggi golongannya, semakin besar gajinya
                     </p>
                   </div>
                 </div>
@@ -1506,13 +1548,13 @@
           </div>
           <div class="faq_cta">
             <div class="section-header text-align-center">
-              <h3>Still have a question?</h3>
+              <h3>Masih punya beberapa pertanyaan?</h3>
               <p class="text-size-medium">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Ayo! Jangan sungkan untuk tanyakan ya!
               </p>
             </div>
             <div class="button-group align-center">
-              <a href="/about" class="button w-button">Contact</a>
+              <a href="/about" class="button w-button">Bertanya</a>
             </div>
           </div>
         </div>
