--- a/IT FEST.html
+++ b/IT FEST.html
@@ -975,9 +975,9 @@
                       rotateZ(0) skew(0, 0);
                     opacity: 0;
                   " class="heading-style-h6">
-              this is how it works<br />
+              Content Videos<br />
             </h2>
-            <h2 class="heading-style-h3">Teamwork makes the dreamwork, so make it seamless.</h2>
+            <h2 class="heading-style-h3">Review Konten CV Para Pelamar!</h2>
           </div>
           <div class="w-layout-grid features_component">
             <div id="w-node-c5516d98-0025-c9f2-6277-654d92780f1d-b4ae9aaf"
@@ -1003,10 +1003,9 @@
                       " alt="UI Elements, time management app." class="features_image" />
               </div>
               <div id="w-node-a9ba5952-76d7-bbf4-1198-efd90cc6c95c-b4ae9aaf" class="features_content">
-                <h3 class="heading-style-h4">Let the time flow</h3>
+                <h3 class="heading-style-h4">Konten Review CV Penonton</h3>
                 <p class="text-weight-normal text-size-regular">
-                  Visualize project timelines, milestones, and deadlines in a dynamic and
-                  interactive timeline view for better project planning and tracking.
+                  Review CV dari para komentar tiktok dan memberikan solusi dan saran terbaik untuk CV mereka!
                 </p>
               </div>
             </div>
@@ -1022,11 +1021,9 @@
                     opacity: 0;
                   " class="features_bottom">
               <div id="w-node-_344d5423-7ab3-e47d-78d6-aaaefbff9a44-b4ae9aaf" class="features_content">
-                <h4>Task management? Easy.</h4>
+                <h4>Konten Cek CV Para Pelamar!</h4>
                 <p class="text-weight-normal text-size-regular">
-                  Manage tasks with ease using a kanban-style board, allowing for intuitive task
-                  organization, prioritization, and progress tracking across stages of
-                  completion.
+                  Mengecek CV dari para komentar tiktok!
                 </p>
               </div>
               <div id="w-node-_344d5423-7ab3-e47d-78d6-aaaefbff9a42-b4ae9aaf" class="features_image-wrapper">
@@ -1042,7 +1039,7 @@
             </div>
           </div>
           <div class="button-group align-center">
-            <a href="/pricing" class="button is-secondary w-button">Get started free</a>
+            <a href="https://www.tiktok.com/@vmuliana/video/7241541423915339014?q=konten%20vina%20muliana%20review%20cv&t=1727680221640" class="button is-secondary w-button">Ayo cek TikTok Vina!</a>
           </div>
         </div>
       </div>
@@ -1112,7 +1109,7 @@
                       <div class="text-style-subheading">Contact</div>
                     </div>
                     <div class="max-width-xmedium">
-                      <h3 class="h3_01">Want To Know More About Vina?</h3>
+                      <h3 class="h3_01 " style="color: white;">Want To Know More About Vina?</h3>
                     </div>
                     <div class="buttons_wrap">
                       <a data-metprop="contact" typeform_id="" data-met="contact" href="/contact"
