--- a/IT FEST.html
+++ b/IT FEST.html
@@ -1506,7 +1506,7 @@
             </div>
             <div class="error-message w-form-fail">
               <div class="error-text">
-                Oops! Something went wrong while submitting the form.
+                Oops! Something went wrong while submitting the formw
               </div>
             </div>
           </div>
