--- a/IT FEST.html
+++ b/IT FEST.html
@@ -1010,7 +1010,7 @@
               </div>
               <div id="w-node-_344d5423-7ab3-e47d-78d6-aaaefbff9a42-b4ae9aaf" class="features_image-wrapper">
                 <img
-                  src="https://cdn.prod.website-files.com/663249e88f740b1eb4ae9a5a/66338a1194fdac674e9dc8c0_img2.webp"
+                  src="images/kontencv1.png"
                   loading="lazy" sizes="(max-width: 479px) 80vw, (max-width: 991px) 63vw, 45vw" srcset="
                         https://assets-global.website-files.com/663249e88f740b1eb4ae9a5a/66338a1194fdac674e9dc8c0_img2-p-500.webp   500w,
                         https://assets-global.website-files.com/663249e88f740b1eb4ae9a5a/66338a1194fdac674e9dc8c0_img2-p-800.webp   800w,
