--- a/IT FEST.html
+++ b/IT FEST.html
@@ -39,7 +39,7 @@
                                   <div role="listitem" class="navbar_dropdown-item w-dyn-item">
                                       <a href="/services/Profile" data-metprop="design" data-met="topmenu" aria-current="page" class="navbar_menu-dropdown-link w-inline-block w--current">
                                           <div class="navbar_dot background-orange"></div>
-                                          <div class="navbar_menu-link-text">BUMN</div>
+                                          <div class="navbar_menu-link-text">Profile</div>
                                       </a>
                                   </div>
                                   <div role="listitem" class="navbar_dropdown-item w-dyn-item">
@@ -120,11 +120,11 @@
                           <div>Projects</div>
                           <div class="navbar_link-bg"></div>
                       </a>
-                      <a href="/about-us" data-metprop="about-us" data-met="topmenu" class="navbar_link w-inline-block">
+                      <a href="#askme" data-metprop="about-us" data-met="topmenu" class="navbar_link w-inline-block">
                           <div class="navbar_dot-wrap">
                               <div class="navbar_dot background-purple"></div>
                           </div>
-                          <div>About us</div>
+                          <div>Ask Me</div>
                           <div class="navbar_link-bg"></div>
                       </a>
                       <a href="/contact" data-metprop="contact" data-met="topmenu" class="navbar_link w-inline-block">
@@ -530,7 +530,7 @@
                           </div>
                           <div class="button-group">
                           
-                            <a data-metprop="learn-more" data-met="hero" href="#vision" class="button is-down w-inline-block" >
+                            <a data-metprop="learn-more" data-met="hero" href="#projects" class="button is-down w-inline-block" >
                               <div class="button_wrap">
                                   <div class="button-icon_wrap background-white">
                                       <div class="icon-1x1-small is-arrow w-embed">
@@ -1456,7 +1456,7 @@
           </div>
         </section>
 
-        <section class="faq">
+        <section class="faq" id="askme">
           <div class="w-layout-blockcontainer padding-global padding-section-large w-container">
             <div class="faq_wrapper">
               <div class="faq_header">
